--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-header > .inner > .menu > li a {
+/* color */
+header > .inner > .menu > li a, .btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +11,7 @@ header > .inner > .menu {
   align-items: center;
 }
 
-header > .inner .search-wrap .search .textfield .search-icon, header > .inner .search-wrap {
+header > .inner .search-wrap .search .textfield .search-icon, header > .inner .search-wrap, .figures figure, .figures figcaption, .figures figcaption * {
   position: absolute;
   top: 0;
   left: 0;
@@ -35,12 +36,92 @@ body {
   color: #1d1d1d;
 }
 
+a {
+  color: #1d1d1d;
+}
+
+img {
+  display: block;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  -webkit-user-drag: none;
+}
+
+p {
+  line-height: 1.6;
+}
+
+.inner {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+  position: relative;
+}
+
+/* BUTTON */
+.btn {
+  height: 24px;
+  padding: 0 10px;
+  border: none;
+  border-radius: 100px;
+  outline: none;
+  font-size: 11px;
+  line-height: 1;
+  color: #fff;
+  background-color: #0071e3;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.7;
+}
+
+.btn:focus {
+  box-shadow: 0 0 0 4px #81b9f1;
+}
+
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+/* LINKS */
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+a.link {
+  color: #0071e3;
+  font-size: 19px;
+  line-height: 1.3;
+}
+
+a.link:hover {
+  text-decoration: underline;
+}
+
+a.link::after {
+  content: " >";
+}
+
+/* FIGURES */
+.figures {
+  position: relative;
+}
+/* HEADER */
 header {
   background-color: #3a3a3a;
+  position: relative;
+  z-index: 9;
 }
 header > .inner {
   max-width: 1020px;
-  margin: 0 auto;
   /* MENU */
   /* SEARCH */
 }
@@ -158,7 +239,7 @@ header > .inner .search-wrap .search .shadow {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2509803922);
 }
 header > .inner .search-wrap .search .textfield {
   position: relative;
@@ -233,14 +314,111 @@ header.searching .search .autocompletes h3, header.searching .search .autocomple
   transition-delay: 0.2s;
   transform: translate(0, 0);
 }
-
 header.searching ul.menu > li {
   transform: scale(0.7);
   opacity: 0;
 }
-
 header.searching .search-wrap {
   visibility: visible;
   opacity: 1;
   transition-delay: 0.2s;
+}
+
+/* NAV */
+nav {
+  background-color: rgba(255, 255, 255, 0.4392156863);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  border-bottom: 1px solid #d2d2d2;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+nav > .inner {
+  max-width: 1000px;
+  height: 52px;
+  display: flex;
+  align-items: center;
+}
+nav > .inner > h1 {
+  flex-grow: 1;
+  font-size: 22px;
+  font-weight: 500;
+}
+nav > .inner .menu {
+  display: flex;
+  gap: 12px;
+  margin-right: 18px;
+}
+nav > .inner .menu > li > a {
+  display: block;
+  padding: 6px;
+  font-size: 11px;
+}
+nav > .inner .menu > li:not(.active) > a:hover {
+  color: #0071e3;
+}
+nav > .inner .menu > li.active > a {
+  opacity: 0.5;
+  cursor: default;
+}
+
+/* HERO */
+.hero {
+  background-color: #f5f5f5;
+}
+.hero > .inner {
+  padding-bottom: 110px;
+  overflow: hidden;
+}
+.hero > .inner > h1 {
+  width: 221px;
+  height: 91px;
+  background-image: url("/images/hero_ipad_text.png");
+  position: absolute;
+  transform: translate(624px, 235px);
+  z-index: 2;
+}
+.hero > .inner .figures {
+  transform: translate(74px, -64px);
+  height: 808px;
+}
+.hero > .inner .figures figcaption .caption-camera {
+  width: 120px;
+  height: 84px;
+  background-image: url("/images/hero_ipad_caption_camera.png");
+  transform: translate(43px, 580px);
+}
+.hero > .inner .figures figcaption .caption-chip {
+  width: 95px;
+  height: 43px;
+  background-image: url("/images/hero_ipad_caption_chip.png");
+  transform: translate(589px, 510px);
+}
+.hero > .inner .figures figcaption .caption-storage {
+  width: 80px;
+  height: 43px;
+  background-image: url("/images/hero_ipad_caption_storage.png");
+  transform: translate(627px, 631px);
+}
+.hero > .inner > h2 {
+  width: 738px;
+  height: 145px;
+  margin: 0 auto;
+  background-image: url("/images/hero_headline.png");
+}
+.hero > .inner > p.pricing {
+  margin-top: 40px;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+}
+.hero > .inner > p.description {
+  width: 88%;
+  margin: 18px auto 0;
+  font-size: 19px;
+  text-align: center;
+}
+.hero > .inner .links {
+  margin-top: 30px;
 }/*# sourceMappingURL=main.css.map */
