--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,12 @@
-$bg-black: #3a3a3a;
-$font-white: #f5f5f5;
+/* color */
+$color-font: #1d1d1d;
+$color-blue: #0071e3;
+$color-lightblue: #81b9f1;
+$color-darkgray: #6e6e6e;
+$color-lightgray: #f5f5f5;
+$color-border: #d2d2d2;
+$color-header: #3a3a3a;
+$color-shadow: #00000040;
 
 %flex-center {
   display: flex;
@@ -33,24 +40,105 @@ html.fixed {
 body {
   font-size: 16px;
   line-height: 1;
-  color: #1d1d1d;
+  color: $color-font;
 }
 
+a {
+  color: $color-font;
+}
+
+img {
+  display: block;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+p {
+  line-height: 1.6;
+}
+
+.inner {
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+  position: relative;
+}
+
+/* BUTTON */
+.btn {
+  @extend %flex-center;
+  height: 24px;
+  padding: 0 10px;
+  border: none;
+  border-radius: 100px;
+  outline: none;
+  font-size: 11px;
+  line-height: 1;
+  color: #fff;
+  background-color: $color-blue;
+  cursor: pointer;
+}
+.btn:hover {
+  opacity: .7;
+}
+.btn:focus {
+  box-shadow: 0 0 0 4px $color-lightblue;
+}
+.bgtext {
+  display: block;
+  text-indent: -9999px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+/* LINKS */
+.links {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+a.link {
+  color: $color-blue;
+  font-size: 19px;
+  line-height: 1.3;
+}
+a.link:hover {
+  text-decoration: underline;
+}
+a.link::after {
+  content: " >";
+}
+
+/* FIGURES */
+.figures {
+  position: relative;
+
+  figure, figcaption, figcaption * {
+    @extend %absolute-left-zero;
+  }
+}
+
+
+/* HEADER */
 header {
-  background-color: $bg-black;
+  $h-height: 44px;
+
+  background-color: $color-header;
+  position: relative;
+  z-index: 9;
 
   > .inner {
     max-width: 1020px;
-    margin: 0 auto;
 
     /* MENU */
     > .menu {
-      height: 44px;
+      height: $h-height;
       @extend %flex-between;
 
       > li {
         display: flex;
-        height: 44px;
+        height: $h-height;
         position: relative;
         transition: .4s;
 
@@ -58,7 +146,7 @@ header {
           padding: 0 10px;
           font-size: 11px;
           @extend %flex-center;
-          color: $font-white;
+          color: $color-lightgray;
           opacity: .8;
         }
         a:hover {
@@ -90,7 +178,7 @@ header {
         .basket {
           width: 290px;
           padding: 10px 20px;
-          border: 1px solid #d2d2d2;
+          border: 1px solid $color-border;
           border-radius: 10px;
           box-sizing: border-box;
           background-color:  #fff;
@@ -113,7 +201,7 @@ header {
             content: "";
             width: 12px;
             height: 12px;
-            border: 1px solid #d2d2d2;
+            border: 1px solid $color-border;
             background-color: #fff;
             transform: rotate(45deg);
             transform-origin: 0 0;
@@ -125,7 +213,7 @@ header {
           .message {
             padding: 30px 0;
             font-size: 13px;
-            color: #6e6e6e;
+            color: $color-darkgray;
             text-align: center;
           }
 
@@ -133,13 +221,13 @@ header {
             margin-top: 10px;
             
             > li {
-              border-top: 1px solid #d2d2d2;
+              border-top: 1px solid $color-border;
 
               a {
                 display: block;
                 padding: 14px;
                 font-size: 13px;
-                color: #0071e3;
+                color: $color-blue;
               }
               a:hover {
                 text-decoration: underline;
@@ -173,7 +261,7 @@ header {
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: rgba(0,0,0,.4);
+          background-color: $color-shadow;
         }
 
         .textfield {
@@ -181,7 +269,7 @@ header {
 
           > input {
             width: 100%;
-            height: 44px;
+            height: $h-height;
             padding: 0 40px;
             border: none;
             outline: none;
@@ -193,7 +281,7 @@ header {
 
           .search-icon {
             width: 40px;
-            height: 44px;
+            height: $h-height;
             background-image: url("/images/header_search.svg");
             background-repeat: no-repeat;
             background-position: center;
@@ -203,7 +291,7 @@ header {
 
           .search-closer {
             width: 40px;
-            height: 44px;
+            height: $h-height;
             background-image: url("/images/header_close.svg");
             background-repeat: no-repeat;
             background-position: center;
@@ -228,7 +316,7 @@ header {
 
           > h3 {
             font-size: 12px;
-            color: #6e6e6e;
+            color: $color-darkgray;
             margin-bottom: 12px;
           }
 
@@ -242,8 +330,8 @@ header {
                 cursor: pointer;
               }
               > a:hover {
-                background-color: #f5f5f5;
-                color: #0071e3;
+                background-color: $color-lightgray;
+                color: $color-blue;
               }
             }
           }
@@ -260,19 +348,143 @@ header .search {
   }
 }
 /* SEARCHING */
-header.searching .search {
-  input, .search-icon, 
-  .autocompletes h3, .autocompletes li {
+header.searching {
+  .search {
+    input, .search-icon, 
+    .autocompletes h3, .autocompletes li {
+      transition-delay: .2s;
+      transform: translate(0, 0);
+    }
+  }
+
+  ul.menu > li {
+    transform: scale(.7);
+    opacity: 0;
+  }
+
+  .search-wrap {
+    visibility: visible;
+    opacity: 1;
     transition-delay: .2s;
-    transform: translate(0, 0);
   }
 }
-header.searching ul.menu > li {
-  transform: scale(.7);
-  opacity: 0;
+
+
+/* NAV */
+nav {
+  background-color: #ffffff70;
+  backdrop-filter: blur(20px);
+  border-bottom: 1px solid $color-border;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
+  > .inner {
+    max-width: 1000px;
+    height: 52px;
+    display: flex;
+    align-items: center;
+
+    > h1 {
+      flex-grow: 1;
+      font-size: 22px;
+      font-weight: 500;
+    }
+
+    .menu {
+      display: flex;
+      gap: 12px;
+      margin-right: 18px;
+
+      > li {
+        > a {
+          display: block;
+          padding: 6px;
+          font-size: 11px;
+        }
+      }
+
+      > li:not(.active) > a:hover {
+        color: $color-blue;
+      }
+        
+      > li.active > a {
+        opacity: .5;
+        cursor: default;
+      }
+    }
+  }
 }
-header.searching .search-wrap {
-  visibility: visible;
-  opacity: 1;
-  transition-delay: .2s;
+
+
+/* HERO */
+.hero {
+  background-color: $color-lightgray;
+
+  > .inner {
+    padding-bottom: 110px;
+    overflow: hidden;
+
+    > h1 {
+      width: 221px;
+      height: 91px;
+      background-image: url("/images/hero_ipad_text.png");
+      position: absolute;
+      transform: translate(624px, 235px);
+      z-index: 2;
+    }
+
+    .figures {
+      transform: translate(74px, -64px);
+      height: 808px;
+      
+      figcaption {
+        .caption-camera {
+          width: 120px;
+          height: 84px;
+          background-image: url("/images/hero_ipad_caption_camera.png");
+          transform: translate(43px, 580px);
+        }
+
+        .caption-chip {
+          width: 95px;
+          height: 43px;
+          background-image: url("/images/hero_ipad_caption_chip.png");
+          transform: translate(589px, 510px);
+        }
+
+        .caption-storage {
+          width: 80px;
+          height: 43px;
+          background-image: url("/images/hero_ipad_caption_storage.png");
+          transform: translate(627px, 631px);
+        }
+      }
+    }
+
+    > h2 {
+      width: 738px;
+      height: 145px;
+      margin: 0 auto;
+      background-image: url("/images/hero_headline.png");
+    }
+
+    > p.pricing {
+      margin-top: 40px;
+      font-size: 20px;
+      font-weight: 600;
+      text-align: center;
+    }
+
+    > p.description {
+      width: 88%;
+      margin: 18px auto 0;
+      font-size: 19px;
+      text-align: center;
+    }
+
+    .links {
+      margin-top: 30px;
+    }
+  }
 }
