--- a/css/main.css
+++ b/css/main.css
@@ -1028,7 +1028,62 @@ main {
   text-align: center;
 }
 
-/* 38강 */
+/* COMPARE */
+.compare {
+  padding: 20px 20px 0;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+.compare .items {
+  display: flex;
+  justify-content: space-around;
+  max-width: 940px;
+  margin: 68px auto 74px;
+}
+.compare .items .item {
+  width: 190px;
+  padding-bottom: 34px;
+  border-bottom: 1px solid #d2d2d2;
+}
+.compare .items .item .thumbnail {
+  height: 214px;
+  margin-bottom: 22px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.compare .items .item ul.colors {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+.compare .items .item ul.colors li {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  box-shadow: rgba(0, 0, 0, 0.062745098);
+}
+.compare .items .item h3.name {
+  margin-bottom: 4px;
+  font-size: 22px;
+}
+.compare .items .item .tagline {
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+.compare .items .item .price {
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+.compare .items .item .btn {
+  margin: 0 auto 14px;
+}
+.compare .items .item a.link {
+  font-size: 14px;
+}
+
 /* FOOTER */
 footer {
   background-color: #f5f5f5;
