--- a/css/main.css
+++ b/css/main.css
@@ -6,22 +6,10 @@ header > .inner > .menu > li a, .btn {
   align-items: center;
 }
 
-header > .inner > .menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
 header > .inner .search-wrap .search .textfield .search-icon, header > .inner .search-wrap, .figures figure, .figures figcaption, .figures figcaption * {
   position: absolute;
   top: 0;
   left: 0;
-}
-
-header > .inner .search-wrap .search .textfield .search-closer {
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 
 /* style ========================== */
@@ -264,6 +252,7 @@ header {
   background-color: #3a3a3a;
   position: relative;
   z-index: 9;
+  transition: 0.4s;
 }
 header > .inner {
   max-width: 1020px;
@@ -272,6 +261,9 @@ header > .inner {
 }
 header > .inner > .menu {
   height: 44px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 header > .inner > .menu > li {
   display: flex;
@@ -287,6 +279,9 @@ header > .inner > .menu > li a {
 }
 header > .inner > .menu > li a:hover {
   opacity: 1;
+}
+header > .inner > .menu > li.menu-starter {
+  display: none;
 }
 header > .inner > .menu > li.apple-logo > a,
 header > .inner > .menu > li.search-starter > a,
@@ -414,6 +409,9 @@ header > .inner .search-wrap .search .textfield .search-closer {
   background-image: url("/images/header_close.svg");
   background-repeat: no-repeat;
   background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
   opacity: 0.4;
   cursor: pointer;
 }
@@ -446,7 +444,11 @@ header > .inner .search-wrap .search .autocompletes > ul > li > a:hover {
   background-color: #f5f5f5;
   color: #0071e3;
 }
+header > .inner .clone-menu {
+  display: none;
+}
 
+/* Search animation style */
 header .search input, header .search .search-icon,
 header .search .autocompletes h3, header .search .autocompletes li {
   transition: 0.6s;
@@ -477,7 +479,7 @@ nav {
   border-bottom: 1px solid #d2d2d2;
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 8;
 }
 nav > .inner {
   max-width: 1000px;
@@ -952,7 +954,7 @@ main {
 .privacy figure figcaption .caption-touch-id {
   width: 150px;
   height: 31px;
-  background-image: url("/images/privacy_touch_apple_id.png");
+  background-image: url("/images/privacy_caption_touch_id.png");
   transform: translate(533px, 485px);
 }
 
@@ -1223,6 +1225,279 @@ footer .legal ul li:not(:last-child)::after {
   color: #d2d2d2;
 }
 
+/* tablet */
+@media (max-width: 1000px) {
+  header > .inner {
+    padding: 0 10px;
+  }
+}
+/* mobile */
+@media (max-width: 740px) {
+  /* HEADER */
+  header::before {
+    content: "";
+    position: fixed;
+    top: 44px;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: black;
+    transition: 0.4s;
+  }
+  header {
+    background-color: black;
+  }
+  header > .inner > ul.menu > li {
+    display: none;
+  }
+  header > .inner > ul.menu > li.menu-starter,
+  header > .inner > ul.menu > li.apple-logo,
+  header > .inner > ul.menu > li.basket-starter {
+    display: flex;
+  }
+  header > .inner > ul.menu > li.menu-starter span {
+    display: block;
+    width: 15px;
+    height: 1px;
+    background-color: white;
+    margin-bottom: 6px;
+    transition: 0.4s;
+  }
+  header > .inner > ul.menu > li.menu-starter span:last-child {
+    margin-bottom: 0;
+  }
+  header > .inner .search-wrap {
+    padding: 0 20px 14px;
+    border-bottom: 1px solid #3a3a3a;
+    box-sizing: border-box;
+    top: 44px;
+  }
+  header > .inner .search-wrap .search {
+    max-width: 590px;
+  }
+  header > .inner .search-wrap .search .shadow {
+    display: none;
+  }
+  header > .inner .search-wrap .search .textfield {
+    border-radius: 10px;
+    background-color: #1d1d1d;
+    width: 100%;
+    transition: 0.2s;
+  }
+  header > .inner .search-wrap .search .search-closer {
+    display: none;
+  }
+  header > .inner .search-wrap .search .search-canceler {
+    height: 44px;
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+    color: #81b9f1;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: 0.4s;
+    visibility: hidden;
+    opacity: 0;
+  }
+  header > .inner .search-wrap .search input, header > .inner .search-wrap .search .search-icon,
+  header > .inner .search-wrap .search .autocompletes h3, header > .inner .search-wrap .search .autocompletes li {
+    transform: translate(0, 0);
+  }
+  header > .inner .search-wrap .search .autocompletes {
+    top: 58px;
+    padding: 26px 0 20px;
+    background-color: transparent;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s;
+    transform: translate(0, -100px);
+  }
+  header > .inner .search-wrap .search .autocompletes ul li {
+    border-bottom: 1px solid #3a3a3a;
+  }
+  header > .inner .search-wrap .search .autocompletes ul li a {
+    padding: 16px 0 16px 16px;
+    color: #b7b7b7;
+  }
+  header > .inner .search-wrap .search .autocompletes ul li:last-child {
+    border-bottom: none;
+  }
+  header > .inner .search-wrap .search .autocompletes ul li:hover a {
+    background-color: transparent;
+    color: black;
+  }
+  header > .inner .clone-menu {
+    display: block;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 103px;
+    left: 0;
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+    transform: translate(0, -50px);
+    transition: 0.4s;
+  }
+  header > .inner .clone-menu ul {
+    max-width: 590px;
+    margin: 4px auto;
+  }
+  header > .inner .clone-menu ul li {
+    border-bottom: 1px solid #3a3a3a;
+  }
+  header > .inner .clone-menu ul li a {
+    padding: 16px 0;
+    display: block;
+    font-size: 14px;
+    color: #b7b7b7;
+  }
+  header > .inner .clone-menu ul li:last-child {
+    border-bottom: none;
+  }
+  header > .inner .clone-menu ul li:hover a {
+    color: white;
+  }
+  /* menuing */
+  header.menuing::before {
+    height: 100vh;
+    background-color: black;
+  }
+  header.menuing > .inner > ul.menu > li.basket-starter {
+    opacity: 0;
+    visibility: hidden;
+  }
+  header.menuing > .inner > ul.menu > li.menu-starter span:first-child {
+    transform: translate(0, 3.5px) rotate(45deg);
+  }
+  header.menuing > .inner > ul.menu > li.menu-starter span:last-child {
+    transform: translate(0, -3.5px) rotate(-45deg);
+  }
+  header.menuing > .inner .search-wrap {
+    visibility: visible;
+    opacity: 1;
+  }
+  header.menuing > .inner .clone-menu {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+  /* menuing & searching */
+  header.menuing.searching--mobile {
+    transform: translate(0, -30px);
+  }
+  header.menuing.searching--mobile .search .textfield {
+    width: calc(100% - 55px);
+  }
+  header.menuing.searching--mobile .search .autocompletes {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+  header.menuing.searching--mobile .search .search-canceler {
+    visibility: visible;
+    opacity: 1;
+  }
+  header.menuing.searching--mobile .clone-menu {
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(0, 100px);
+  }
+  /* NAV */
+  nav .shadow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2509803922);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.4s;
+  }
+  nav .contents-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 52px;
+    border-bottom: 1px solid #d2d2d2;
+    background-color: white;
+    visibility: hidden;
+    transition: 0.4s;
+  }
+  nav > .inner .menu-toggler {
+    width: 30px;
+    height: 24px;
+    margin-right: 10px;
+    cursor: pointer;
+    position: relative;
+  }
+  nav > .inner .menu-toggler::before,
+  nav > .inner .menu-toggler::after {
+    content: "";
+    display: block;
+    width: 11px;
+    height: 1px;
+    background-color: #6e6e6e;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: 0.4s;
+  }
+  nav > .inner .menu-toggler::before {
+    transform: rotate(40deg);
+    left: -9px;
+  }
+  nav > .inner .menu-toggler::after {
+    transform: rotate(-40deg);
+    right: -9px;
+  }
+  nav > .inner .menu {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 52px;
+    left: 0;
+    width: 100%;
+    padding: 10px 40px 30px;
+    box-sizing: border-box;
+    display: block;
+    transition: 0.4s;
+    transform: translate(0, -50px);
+  }
+  nav > .inner .menu li:not(:last-child) {
+    border-bottom: 1px solid #d2d2d2;
+  }
+  nav > .inner .menu li a {
+    padding: 16px 0;
+    font-size: 14px;
+  }
+  nav.menuing .shadow {
+    visibility: visible;
+    opacity: 1;
+  }
+  nav.menuing .contents-bg {
+    visibility: visible;
+    height: 232px;
+  }
+  nav.menuing .menu-toggler::before {
+    transform: rotate(-40deg);
+  }
+  nav.menuing .menu-toggler::after {
+    transform: rotate(40deg);
+  }
+  nav.menuing .menu {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
 /* animation keyframes */
 @keyframes sprite-icon {
   /* 1~10 */
